    command-line, Larch will use the options in that section for the session;
    otherwise it will use the options in the "default" section. See the README
    for more details.
  * Added experimental support for Yahoo! Mail IMAP when connecting to
    imap.mail.yahoo.com or imap-ssl.mail.yahoo.com. See the README for caveats
    and known issues.
  * Folders are now copied recursively by default.
  * Progress information is now displayed regularly while scanning large
    mailboxes.
  * Added --delete option to delete messages from the source after copying them
    to the destination, or if they already exist at the destination.
  * Added --expunge option to expunge deleted messages from the source.
  * Added --sync-flags option to synchronize message flags (like Seen, Flagged,
    etc.) from the source server to the destination server for messages that
    already exist on the destination.
  * Added short versions of common command-line options.
  * The --fast-scan option has been removed.
  * The --to-folder option can now be used in conjunction with --all or
    --all-subscribed to copy messages from multiple source folders to a single
    destination folder.
  * More concise log messages to reduce visual clutter in the log.
  * Monkeypatched Net::IMAP to fix broken response handling with certain server
    responses, particularly when changing mailboxes on a Dovecot 1.2+ server.
  * Fixed encoding issues when creating mailboxes and getting mailbox lists.
  * Fixed incorrect case-sensitive treatment of the 'INBOX' folder name.
  * Fixed a bug in which Larch would try to copy flags that weren't supported on
    the destination server.
  * Fixed an issue when trying to copy a folder with leading or trailing
    whitespace in the name to Gmail, since Gmail doesn't allow whitespace around
    folder names.

Version 1.0.2 (2009-08-05)
  * Fixed a bug that caused Larch to try to set the read-only \Recent flag on
    the destination server.
